problem found: .fixedscroll overflow hidden was hiding (obviously) the overflow

--- a/css/mapall.css
+++ b/css/mapall.css
@@ -10,8 +10,8 @@
 /* This class is added on scroll */
 
 .fixedscroll {
-    overflow: hidden;
-    z-index: 10;
+    /*overflow: hidden;  makes submenus unseen*/
+    z-index: 99;
     position: fixed;
     /* Set the navbar to fixed position */
     left: 0;
